--- a/src/localization/en/en.json
+++ b/src/localization/en/en.json
@@ -711,7 +711,9 @@
             "pronouns": "Pronouns",
             "tags": {
                 "friend_no": "Friend {number}",
-                "vrchat_team": "VRChat Team"
+                "vrchat_team": "VRChat Team",
+                "18_plus_verified": "18+ Verified",
+                "age_verified": "Age Verified"
             },
             "badges": {
                 "assigned": "Assigned",
