Add last visited group info and history dialog

--- a/src/localization/cz/en.json
+++ b/src/localization/cz/en.json
@@ -789,6 +789,7 @@
                 "heat": "Heat",
                 "popularity": "Popularity",
                 "created_at": "Created At",
+                "last_visited": "Last Visited",
                 "last_updated": "Last Updated",
                 "publication_date": "Publication Date",
                 "labs_publication_date": "Labs Publication Date",
@@ -851,6 +852,7 @@
                 "copy_id": "Copy ID",
                 "copy_url": "Copy URL",
                 "created_at": "Created At",
+                "last_visited": "Last Visited",
                 "last_updated": "Last Updated",
                 "version": "Version",
                 "platform": "Platform",
@@ -908,6 +910,7 @@
                 "rules": "Rules",
                 "members": "Members",
                 "created_at": "Created At",
+                "last_visited": "Last Visited",
                 "links": "Links",
                 "url": "Group URL",
                 "url_tooltip": "Copy URL to clipboard",
@@ -926,6 +929,7 @@
                 "visibility": "Visibility:",
                 "edited_at": "Edited At:",
                 "created_at": "Created At:",
+                "last_visited": "Last Visited",
                 "edit_tooltip": "Edit Post",
                 "delete_tooltip": "Delete Post",
                 "edited_by": "Edited by:",
@@ -1406,6 +1410,7 @@
             "joined_at": "Joined At",
             "banned_at": "Banned At",
             "created_at": "Created At",
+                "last_visited": "Last Visited",
             "type": "Type",
             "description": "Description",
             "data": "Data",
