--- a/src/localization/es/en.json
+++ b/src/localization/es/en.json
@@ -906,6 +906,7 @@
                 "heat": "Calor",
                 "popularity": "Popularidad",
                 "created_at": "Creado el",
+                "last_visited": "Last Visited",
                 "last_updated": "Última Actualización",
                 "publication_date": "Fecha de Publicación",
                 "labs_publication_date": "Fecha de Publicación en Laboratorios",
@@ -970,6 +971,7 @@
                 "copy_id": "Copiar ID",
                 "copy_url": "Copiar URL",
                 "created_at": "Creado el",
+                "last_visited": "Last Visited",
                 "last_updated": "Última Actualización",
                 "version": "Versión",
                 "platform": "Plataforma",
@@ -1028,6 +1030,7 @@
                 "rules": "Reglas",
                 "members": "Miembros",
                 "created_at": "Creado el",
+                "last_visited": "Last Visited",
                 "links": "Enlaces",
                 "url": "URL del Grupo",
                 "url_tooltip": "Copiar URL al portapapeles",
@@ -1046,6 +1049,7 @@
                 "visibility": "Visibilidad:",
                 "edited_at": "Editado el:",
                 "created_at": "Creado el:",
+                "last_visited": "Last Visited",
                 "edit_tooltip": "Editar Publicación",
                 "delete_tooltip": "Eliminar Publicación",
                 "edited_by": "Editado por:",
@@ -1520,6 +1524,7 @@
             "joined_at": "Unido el",
             "banned_at": "Prohibido el",
             "created_at": "Creado el",
+                "last_visited": "Last Visited",
             "type": "Tipo",
             "description": "Descripción",
             "data": "Datos",
