--- a/src/localization/fr/en.json
+++ b/src/localization/fr/en.json
@@ -857,6 +857,7 @@
                 "heat": "Chaleur",
                 "popularity": "Popularité",
                 "created_at": "Créé le",
+                "last_visited": "Last Visited",
                 "last_updated": "Dernière mise à jour",
                 "publication_date": "Date de publication",
                 "labs_publication_date": "Date de publication au Labs",
@@ -920,6 +921,7 @@
                 "copy_id": "Copier l'ID",
                 "copy_url": "Copier l'URL",
                 "created_at": "Créé le",
+                "last_visited": "Last Visited",
                 "last_updated": "Dernière mise à jour",
                 "version": "Version",
                 "platform": "Plateforme",
@@ -978,6 +980,7 @@
                 "rules": "Régles",
                 "members": "Membres",
                 "created_at": "Créé le",
+                "last_visited": "Last Visited",
                 "links": "Liens",
                 "url": "URL du groupe",
                 "url_tooltip": "Copier l'URL dans le presse-papiers",
@@ -996,6 +999,7 @@
                 "visibility": "Visibilité :",
                 "edited_at": "Édité le :",
                 "created_at": "Créé le :",
+                "last_visited": "Last Visited",
                 "edit_tooltip": "Modifier la publication",
                 "delete_tooltip": "Supprimer la publication",
                 "edited_by": "Édité par :",
@@ -1469,6 +1473,7 @@
             "joined_at": "Rejoint le",
             "banned_at": "Banni le",
             "created_at": "Créé le",
+                "last_visited": "Last Visited",
             "type": "Type",
             "description": "Description",
             "data": "Données",
