--- a/src/localization/hu/en.json
+++ b/src/localization/hu/en.json
@@ -742,6 +742,7 @@
                 "heat": "Heat",
                 "popularity": "Popularity",
                 "created_at": "Created At",
+                "last_visited": "Last Visited",
                 "last_updated": "Last Updated",
                 "publication_date": "Publication Date",
                 "labs_publication_date": "Labs Publication Date",
@@ -805,6 +806,7 @@
                 "copy_id": "Copy ID",
                 "copy_url": "Copy URL",
                 "created_at": "Created At",
+                "last_visited": "Last Visited",
                 "last_updated": "Last Updated",
                 "version": "Verzió",
                 "platform": "Platform",
@@ -862,6 +864,7 @@
                 "rules": "Rules",
                 "members": "Members",
                 "created_at": "Created At",
+                "last_visited": "Last Visited",
                 "links": "Links",
                 "url": "Group URL",
                 "url_tooltip": "Copy URL to clipboard",
@@ -880,6 +883,7 @@
                 "visibility": "Visibility:",
                 "edited_at": "Edited At:",
                 "created_at": "Created At:",
+                "last_visited": "Last Visited",
                 "edit_tooltip": "Edit Post",
                 "delete_tooltip": "Delete Post",
                 "edited_by": "Edited by:",
@@ -1346,6 +1350,7 @@
             "joined_at": "Joined At",
             "banned_at": "Banned At",
             "created_at": "Created At",
+                "last_visited": "Last Visited",
             "type": "Type",
             "description": "Description",
             "data": "Data",
