--- a/src/localization/ja/en.json
+++ b/src/localization/ja/en.json
@@ -909,6 +909,7 @@
                 "heat": "ヒート",
                 "popularity": "人気度",
                 "created_at": "作成日時",
+                "last_visited": "Last Visited",
                 "last_updated": "最終更新日時",
                 "publication_date": "公開日時",
                 "labs_publication_date": "ラボへの公開日時",
@@ -973,6 +974,7 @@
                 "copy_id": "IDをコピー",
                 "copy_url": "URLをコピー",
                 "created_at": "作成日時",
+                "last_visited": "Last Visited",
                 "last_updated": "最終更新日時",
                 "version": "バージョン",
                 "platform": "プラットフォーム",
@@ -1031,6 +1033,7 @@
                 "rules": "ルール",
                 "members": "メンバー数",
                 "created_at": "作成日時",
+                "last_visited": "Last Visited",
                 "links": "リンク",
                 "url": "グループURL",
                 "url_tooltip": "URLをコピー",
@@ -1049,6 +1052,7 @@
                 "visibility": "表示範囲:",
                 "edited_at": "編集日時:",
                 "created_at": "作成日:",
+                "last_visited": "Last Visited",
                 "edit_tooltip": "投稿を編集",
                 "delete_tooltip": "投稿を削除",
                 "edited_by": "編集者:",
@@ -1531,6 +1535,7 @@
             "joined_at": "参加日時",
             "banned_at": "BANした日",
             "created_at": "作成日時",
+                "last_visited": "Last Visited",
             "type": "種類",
             "description": "説明",
             "data": "データ",
