--- a/src/localization/ko/en.json
+++ b/src/localization/ko/en.json
@@ -742,6 +742,7 @@
                 "heat": "히트",
                 "popularity": "인기",
                 "created_at": "최초 업로드",
+                "last_visited": "Last Visited",
                 "last_updated": "마지막 업데이트",
                 "publication_date": "Publication Date",
                 "labs_publication_date": "Labs Publication Date",
@@ -805,6 +806,7 @@
                 "copy_id": "ID 복사",
                 "copy_url": "URL 복사",
                 "created_at": "최초 업로드",
+                "last_visited": "Last Visited",
                 "last_updated": "마지막 업데이트",
                 "version": "버전",
                 "platform": "플랫폼",
@@ -862,6 +864,7 @@
                 "rules": "규칙",
                 "members": "회원",
                 "created_at": "설립일",
+                "last_visited": "Last Visited",
                 "links": "링크",
                 "url": "그룹 URL",
                 "url_tooltip": "URL 복사",
@@ -880,6 +883,7 @@
                 "visibility": "Visibility:",
                 "edited_at": "Edited At:",
                 "created_at": "생성일:",
+                "last_visited": "Last Visited",
                 "edit_tooltip": "Edit Post",
                 "delete_tooltip": "Delete Post",
                 "edited_by": "Edited by:",
@@ -1346,6 +1350,7 @@
             "joined_at": "가입일",
             "banned_at": "Banned At",
             "created_at": "최초 업로드",
+                "last_visited": "Last Visited",
             "type": "유형",
             "description": "Description",
             "data": "Data",
