--- a/src/localization/pl/en.json
+++ b/src/localization/pl/en.json
@@ -742,6 +742,7 @@
                 "heat": "Zainteresowanie",
                 "popularity": "Popularność",
                 "created_at": "Data utworzenia",
+                "last_visited": "Last Visited",
                 "last_updated": "Ostatnia aktualizacja",
                 "publication_date": "Data publikacji",
                 "labs_publication_date": "Data publikacji w Laboratoriach",
@@ -805,6 +806,7 @@
                 "copy_id": "Kopiuj ID",
                 "copy_url": "Kopiuj URL",
                 "created_at": "Data utworzenia",
+                "last_visited": "Last Visited",
                 "last_updated": "Ostatnia aktualizacja",
                 "version": "Wersja",
                 "platform": "Platforma",
@@ -862,6 +864,7 @@
                 "rules": "Zasady",
                 "members": "Członkowie",
                 "created_at": "Data utworzenia",
+                "last_visited": "Last Visited",
                 "links": "Linki",
                 "url": "URL grupy",
                 "url_tooltip": "Kopiuj adres URL do schowka",
@@ -880,6 +883,7 @@
                 "visibility": "Widoczność:",
                 "edited_at": "Edytowano:",
                 "created_at": "Data utworzenia:",
+                "last_visited": "Last Visited",
                 "edit_tooltip": "Edytuj post",
                 "delete_tooltip": "Usuń post",
                 "edited_by": "Edytowany przez:",
@@ -1346,6 +1350,7 @@
             "joined_at": "Dołączono",
             "banned_at": "Zbanowany",
             "created_at": "Data utworzenia",
+                "last_visited": "Last Visited",
             "type": "Typ",
             "description": "Opis",
             "data": "Dane",
