--- a/src/localization/pt/en.json
+++ b/src/localization/pt/en.json
@@ -742,6 +742,7 @@
                 "heat": "Em alta",
                 "popularity": "Popularidade",
                 "created_at": "Criado Em",
+                "last_visited": "Last Visited",
                 "last_updated": "Última Atualização",
                 "publication_date": "Data de Publicação",
                 "labs_publication_date": "Data de Publicação do Laboratório",
@@ -805,6 +806,7 @@
                 "copy_id": "Copiar ID",
                 "copy_url": "Copiar URL",
                 "created_at": "Criado Em",
+                "last_visited": "Last Visited",
                 "last_updated": "Última Atualização",
                 "version": "Versão",
                 "platform": "Plataforma",
@@ -862,6 +864,7 @@
                 "rules": "Regras",
                 "members": "Membros",
                 "created_at": "Criado Em",
+                "last_visited": "Last Visited",
                 "links": "Links",
                 "url": "URL do Grupo",
                 "url_tooltip": "Copiar a URL para a área de transferência",
@@ -880,6 +883,7 @@
                 "visibility": "Visibilidade:",
                 "edited_at": "Editado Em:",
                 "created_at": "Criado Em:",
+                "last_visited": "Last Visited",
                 "edit_tooltip": "Editar Publicação",
                 "delete_tooltip": "Excluir Publicação",
                 "edited_by": "Editado por:",
@@ -1346,6 +1350,7 @@
             "joined_at": "Entrou Em",
             "banned_at": "Banido Em",
             "created_at": "Criado Em",
+                "last_visited": "Last Visited",
             "type": "Tipo",
             "description": "Descrição",
             "data": "Data",
