--- a/src/localization/ru/en.json
+++ b/src/localization/ru/en.json
@@ -910,6 +910,7 @@
                 "heat": "Нагрев",
                 "popularity": "Популярность",
                 "created_at": "Дата и время создания",
+                "last_visited": "Last Visited",
                 "last_updated": "Последнее обновление",
                 "publication_date": "Дата публикации",
                 "labs_publication_date": "Дата публикации в Labs",
@@ -974,6 +975,7 @@
                 "copy_id": "Скопировать ID",
                 "copy_url": "Скопировать URL",
                 "created_at": "Дата и время создания",
+                "last_visited": "Last Visited",
                 "last_updated": "Последнее обновление",
                 "version": "Версия",
                 "platform": "Платформа",
@@ -1032,6 +1034,7 @@
                 "rules": "Правила",
                 "members": "Участники",
                 "created_at": "Дата и время создания",
+                "last_visited": "Last Visited",
                 "links": "Ссылки",
                 "url": "URL группы",
                 "url_tooltip": "Копировать URL в буфер обмена",
@@ -1050,6 +1053,7 @@
                 "visibility": "Видемость:",
                 "edited_at": "Отредактированно в:",
                 "created_at": "Создана:",
+                "last_visited": "Last Visited",
                 "edit_tooltip": "Редактировать объявления",
                 "delete_tooltip": "Удалить объявления",
                 "edited_by": "Отредактированно:",
@@ -1532,6 +1536,7 @@
             "joined_at": "Присоединился",
             "banned_at": "Забанен в",
             "created_at": "Дата и время создания",
+                "last_visited": "Last Visited",
             "type": "Тип",
             "description": "Описание",
             "data": "Данные",
