--- a/src/localization/vi/en.json
+++ b/src/localization/vi/en.json
@@ -742,6 +742,7 @@
                 "heat": "Độ nóng",
                 "popularity": "Độ nổi tiếng",
                 "created_at": "Tạo lúc",
+                "last_visited": "Last Visited",
                 "last_updated": "Lần cập nhật cuối",
                 "publication_date": "Publication Date",
                 "labs_publication_date": "Labs Publication Date",
@@ -805,6 +806,7 @@
                 "copy_id": "Sao chép ID",
                 "copy_url": "Sao chép URL",
                 "created_at": "Tạo lúc",
+                "last_visited": "Last Visited",
                 "last_updated": "Lần cập nhật cuối",
                 "version": "Phiên bản",
                 "platform": "Nền tảng",
@@ -862,6 +864,7 @@
                 "rules": "Luật lệ",
                 "members": "Thành viên",
                 "created_at": "Tạo lúc",
+                "last_visited": "Last Visited",
                 "links": "Đường dẫn",
                 "url": "URL nhóm",
                 "url_tooltip": "Sao chép URL đến clipboard",
@@ -880,6 +883,7 @@
                 "visibility": "Visibility:",
                 "edited_at": "Edited At:",
                 "created_at": "Tạo lúc:",
+                "last_visited": "Last Visited",
                 "edit_tooltip": "Edit Post",
                 "delete_tooltip": "Delete Post",
                 "edited_by": "Edited by:",
@@ -1346,6 +1350,7 @@
             "joined_at": "Tham gia lúc",
             "banned_at": "Banned At",
             "created_at": "Tạo lúc",
+                "last_visited": "Last Visited",
             "type": "Type",
             "description": "Description",
             "data": "Data",
