--- a/src/localization/zh-CN/en.json
+++ b/src/localization/zh-CN/en.json
@@ -911,6 +911,7 @@
                 "heat": "热度",
                 "popularity": "知名度",
                 "created_at": "创建时间",
+                "last_visited": "Last Visited",
                 "last_updated": "最后更新",
                 "publication_date": "正式公开于",
                 "labs_publication_date": "进入实验室的日期",
@@ -976,6 +977,7 @@
                 "copy_id": "复制 ID",
                 "copy_url": "复制链接",
                 "created_at": "创建时间",
+                "last_visited": "Last Visited",
                 "last_updated": "最后更新",
                 "version": "版本",
                 "platform": "支持的平台",
@@ -1034,6 +1036,7 @@
                 "rules": "规则",
                 "members": "成员",
                 "created_at": "创建时间",
+                "last_visited": "Last Visited",
                 "links": "链接",
                 "url": "群组链接",
                 "url_tooltip": "复制链接到剪贴板",
@@ -1052,6 +1055,7 @@
                 "visibility": "可见性：",
                 "edited_at": "最后编辑于：",
                 "created_at": "创建于：",
+                "last_visited": "Last Visited",
                 "edit_tooltip": "编辑帖子",
                 "delete_tooltip": "删除帖子",
                 "edited_by": "最后编辑者：",
@@ -1545,6 +1549,7 @@
             "joined_at": "加入于",
             "banned_at": "封禁于",
             "created_at": "创建于",
+                "last_visited": "Last Visited",
             "type": "类型",
             "description": "描述",
             "data": "数据",
