--- a/src/localization/zh-TW/en.json
+++ b/src/localization/zh-TW/en.json
@@ -910,6 +910,7 @@
                 "heat": "熱度",
                 "popularity": "熱門度",
                 "created_at": "創建時間",
+                "last_visited": "Last Visited",
                 "last_updated": "最後更新",
                 "publication_date": "發佈日期",
                 "labs_publication_date": "實驗室發佈日期",
@@ -974,6 +975,7 @@
                 "copy_id": "複製 ID",
                 "copy_url": "複製連結",
                 "created_at": "創建時間",
+                "last_visited": "Last Visited",
                 "last_updated": "最後更新",
                 "version": "版本",
                 "platform": "平台",
@@ -1032,6 +1034,7 @@
                 "rules": "規則",
                 "members": "成員",
                 "created_at": "創建時間",
+                "last_visited": "Last Visited",
                 "links": "連結",
                 "url": "群組連結",
                 "url_tooltip": "複製連結到剪貼簿",
@@ -1050,6 +1053,7 @@
                 "visibility": "可見度：",
                 "edited_at": "最後編輯於：",
                 "created_at": "創建時間：",
+                "last_visited": "Last Visited",
                 "edit_tooltip": "編輯貼文",
                 "delete_tooltip": "刪除貼文",
                 "edited_by": "編輯：",
@@ -1532,6 +1536,7 @@
             "joined_at": "加入時間",
             "banned_at": "封禁日期",
             "created_at": "創建時間",
+                "last_visited": "Last Visited",
             "type": "類型",
             "description": "敘述",
             "data": "數據",
