--- a/src/localization/zh-CN/en.json
+++ b/src/localization/zh-CN/en.json
@@ -708,7 +708,7 @@
             "tags": {
                 "friend_no": "第 {number} 位好友",
                 "vrchat_team": "VRChat Team",
-                "18_plus_verified": "已通过 18+ 验证,,,
+                "18_plus_verified": "已通过 18+ 验证",
                 "age_verified": "已完成年龄验证"
             },
             "badges": {
