Update Thai localization in README.th.md for clarity and consistency, including image source changes and minor text adjustments.

--- a/src/localization/th/en.json
+++ b/src/localization/th/en.json
@@ -699,9 +699,9 @@
                 "active": "กำลังใช้งาน",
                 "offline": "ออฟไลน์",
                 "online": "ออนไลน์",
-                "join_me": "มาจอยสิ",
-                "ask_me": "ถามก่อนนะ",
-                "busy": "ไม่ว่าง"
+                "join_me": "เข้าร่วมกับฉัน",
+                "ask_me": "ถามฉัน",
+                "busy": "ห้ามรบกวน"
             },
             "previous_display_names": "ชื่อที่แสดงก่อนหน้า:",
             "pronouns": "สรรพนาม",
