Fixed erroneous translation + remove x-link

--- a/src/localization/ru/en.json
+++ b/src/localization/ru/en.json
@@ -783,7 +783,7 @@
                 "instance_hard_closed": "жёстко закрыт",
                 "close_instance": "Закрыть инстанс",
                 "instance_age_gated": "ограничение по возросту",
-                "open_previouse_instance": "Открыть предыдущий инстанс"
+                "open_previous_instance": "Открыть предыдущий инстанс"
             },
             "groups": {
                 "header": "Группы",
