--- a/src/localization/zh-CN/en.json
+++ b/src/localization/zh-CN/en.json
@@ -804,7 +804,7 @@
                 "instance_hard_closed": "房间已关闭",
                 "close_instance": "关闭该房间",
                 "instance_age_gated": "房间具有年龄限制",
-                "open_previouse_instance": "打开上次加入的房间"
+                "open_previous_instance": "打开上次加入的房间"
             },
             "groups": {
                 "header": "群组",
