--- a/src/localization/ja/en.json
+++ b/src/localization/ja/en.json
@@ -798,7 +798,7 @@
                 "instance_hard_closed": "hard closed",
                 "close_instance": "インスタンスを閉じる",
                 "instance_age_gated": "年齢制限あり",
-                "open_previouse_instance": "前回のインスタンスを開く"
+                "open_previous_instance": "前回のインスタンスを開く"
             },
             "groups": {
                 "header": "グループ",
